# maxie_made

./: .env.example  .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml  netlify-deploy.yml  post-deploy-care.yml
autohedge-pro/: README.md
autohedge-pro/.github/workflows/: ci.yml
autohedge-pro/apps/api/: .env.example  Dockerfile  fly.toml  pyproject.toml
autohedge-pro/apps/api/app/: config.py  db.py  main.py
autohedge-pro/apps/api/app/api/v1/: __init__.py  backtest.py  billing.py  portfolio.py  strategies.py
autohedge-pro/apps/api/app/core/: errors.py
autohedge-pro/apps/api/app/models/: __init__.py  backtest.py  org.py  portfolio.py  strategy.py  trade.py
autohedge-pro/apps/api/app/services/: __init__.py  backtester.py  data.py  metrics.py  paper_trader.py  strategies.py  stripe.py
autohedge-pro/apps/api/tests/: test_core.py  test_strategies.py
autohedge-pro/apps/web/: .env.example  netlify.toml  next.config.mjs  package.json  (+3 more)
cloudfinops-copilot/: README.md
cloudfinops-copilot/apps/api/: .env.example  Dockerfile  fly.toml  pyproject.toml
cloudfinops-copilot/apps/api/app/: __init__.py  config.py  db.py  main.py
cloudfinops-copilot/apps/api/app/api/: __init__.py
cloudfinops-copilot/apps/api/app/api/v1/: __init__.py  accounts.py  billing.py  recommendations.py  savings.py
cloudfinops-copilot/apps/api/app/core/: __init__.py  errors.py  sentry.py
cloudfinops-copilot/apps/api/app/models/: __init__.py  base.py  cloud_account.py  org.py  recommendation.py  savings.py
cloudfinops-copilot/apps/api/app/schemas/: __init__.py  cloud_account.py  common.py  recommendation.py  savings.py
cloudfinops-copilot/apps/api/app/services/: __init__.py  aws.py  idle_finder.py  right_sizer.py  savings_verifier.py  stripe.py  terraform_gen.py
cloudfinops-copilot/apps/api/tests/: test_billing.py  test_core.py  test_services.py
landing/: index.html
pegwatch/: .gitignore  DEPLOYMENT.md  LICENSE  MARKETING.md  README.md
pegwatch/apps/api/: .env.example  pyproject.toml
pegwatch/apps/api/app/: __init__.py  config.py  db.py  main.py
pegwatch/apps/api/app/api/: __init__.py
pegwatch/apps/api/app/api/v1/: __init__.py  alerts.py  billing.py  peg.py  stablecoins.py  webhooks.py
pegwatch/apps/api/app/core/: __init__.py  errors.py  logging.py  security.py  security_middleware.py
pegwatch/apps/api/app/models/: __init__.py  alert.py  base.py  peg_snapshot.py  stablecoin.py
pegwatch/apps/api/app/schemas/: __init__.py  alert.py  common.py  peg.py  stablecoin.py
pegwatch/apps/api/app/services/: __init__.py  ai_summary.py  peg_engine.py  price_ingestor.py  stripe.py
pegwatch/apps/api/tests/: conftest.py  test_ai_summary.py  test_api.py  test_peg_engine.py  test_peg_math.py  test_security.py
pharmaip-radar/: README.md  docker-compose.yml
pharmaip-radar/apps/api/: .env.example  Dockerfile  fly.toml  pyproject.toml
pharmaip-radar/apps/api/app/: __init__.py  config.py  db.py  main.py
pharmaip-radar/apps/api/app/api/: __init__.py
pharmaip-radar/apps/api/app/api/v1/: __init__.py  billing.py  landscapes.py  mcp.py  patents.py  reports.py  watchlist.py
pharmaip-radar/apps/api/app/core/: __init__.py  errors.py  logging.py  pagination.py  security.py  security_middleware.py  sentry.py
pharmaip-radar/apps/api/app/mcp/: __init__.py
pharmaip-radar/apps/api/app/models/: __init__.py  base.py  landscape.py  org.py  patent.py  report.py  user.py  watchlist.py
pharmaip-radar/apps/api/app/schemas/: __init__.py  common.py  landscape.py  patent.py  report.py  watchlist.py
pharmaip-radar/apps/api/app/services/: __init__.py  arxiv.py  infringement.py  landscape.py  llm.py  mcp_tools.py  pubmed.py  report.py  similarity.py  stripe.py  uspto.py
pharmaip-radar/apps/api/scripts/: seed.py
pharmaip-radar/apps/api/tests/: conftest.py  test_arxiv.py  test_errors.py  test_infringement.py  test_landscape.py  test_llm.py  test_pubmed.py  test_report.py  test_schemas.py  test_similarity.py  tests_placeholder.py
quantalab/: README.md
scripts/: README.md  clerk-setup.md  connect-frontend-to-backend.ps1  connect-frontend-to-backend.sh  deploy-fly.ps1  deploy-fly.sh  deploy-netlify.ps1  deploy-netlify.sh  fly-help.bat  fly-help.sh  neon-setup.md  netlify-help.bat  netlify-help.sh  setup-clerk.ps1  setup-clerk.sh  setup-neon.ps1  setup-neon.sh
social/: CONTENT_CALENDAR.md  README.md  post-generator.html
social/scripts/: 01-ipo-hook.md  02-stack-breakdown.md  03-before-after-cloudfinops.md  04-roast-saas.md  05-day-in-life.md  06-demo-pegwatch-depeg.md  07-pricing-reveal-pharmaip.md  08-cliffhanger-app6.md
(+230 files in other folders)
