[project]
name = "pegwatch-api"
version = "0.1.0"
description = "PegWatch - Stablecoin depeg early-warning API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "stripe>=11.0.0",
    "python-jose[cryptography]>=3.3.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "bandit>=1.7.10",
    "pip-audit>=2.7.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101", "S104", "B008"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
