[project]
name = "pharmaip-radar-api"
version = "0.1.0"
description = "PharmaIP Radar API — pharma patent & IP intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "stripe>=10.0.0",
    "mcp[cli]>=1.0",
    "reportlab>=4.2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "redis>=5.0.7",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "aiosqlite>=0.22.1",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
]
